// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IsolateTest TestObject constructor 1`] = `
{
  "$type": "UnitTest",
  "children": [],
  "data": {
    "abortController": AbortController {},
    "fieldName": "unicycle",
    "message": "I am Root.",
    "severity": "error",
    "testFn": [MockFunction],
    "type": "Test",
  },
  "key": null,
  "keys": {},
  "output": null,
  "parent": null,
  "status": "UNTESTED",
}
`;

exports[`IsolateTest testObject.warn Should mark the test as warning 1`] = `
{
  "$type": "UnitTest",
  "children": [],
  "data": {
    "abortController": AbortController {},
    "fieldName": "unicycle",
    "message": "I am Root.",
    "severity": "warning",
    "testFn": [MockFunction],
    "type": "Test",
  },
  "key": null,
  "keys": {},
  "output": null,
  "parent": null,
  "status": "UNTESTED",
}
`;
